--- a/index.css
+++ b/index.css
@@ -52,4 +52,18 @@
     display: flex;
     margin:2px;
     gap: 5px;
+     align-items: center;
+}
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.shimmer-card{
+    width: 200px;
+   height: 400px;
+   background-color: #f0f0f0;
+    padding: 4px;
 }
