--- a/index.css
+++ b/index.css
@@ -1,4 +1,13 @@
-.header{
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+
+
+
+ .header{
     display:flex;
     justify-content: space-between;
     position:sticky;
@@ -71,4 +80,4 @@
 .user-card{
     border: 1px solid black;
     padding: 10px;
-}
+} 
